# ALGO-ARENA

./: .gitignore  README.md  package.json
client/: index.html  package.json  tailwind.config.js
client/src/: App.jsx
client/src/components/Battle/: BattleRoom.jsx  PlayerPanel.jsx  Timer.jsx  VSScreen.jsx
client/src/components/Leaderboard/: Leaderboard.jsx  PlayerCard.jsx
client/src/components/Lobby/: CreateRoom.jsx  JoinRoom.jsx  Lobby.jsx
client/src/components/UI/: Badge.jsx  Button.jsx  Modal.jsx  Navbar.jsx
client/src/components/Visualizer/: ArrayVisualizer.jsx
client/src/hooks/: useBattle.js  useSocket.js  useVisualizer.js
client/src/pages/: Battle.jsx  Home.jsx  NotFound.jsx
client/src/styles/: animations.css  globals.css
client/src/utils/: api.js  constants.js  helpers.js
server/: package.json
server/cpp/algorithms/: bubble_sort.cpp  bubble_sort.h  merge_sort.cpp  merge_sort.h
server/cpp/engine/: CMakeLists.txt  runner.cpp
server/shared/: constants.js
server/src/: db.js  index.js
server/src/controllers/: aiJudge.js  battleController.js
server/src/middleware/: errorHandler.js
server/src/routes/: battle.js  leaderboard.js
server/src/socket/: battleHandler.js  index.js  roomManager.js
